name:                smaccm-ins
version:             0.2.0.0
-- synopsis:            
-- description:         
license:             BSD3
license-file:        LICENSE
author:              Jamey Sharp
maintainer:          jamey@galois.com
-- copyright:           
category:            Math
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     SMACCMPilot.INS.Ivory,
                       SMACCMPilot.INS.Simulate,
                       SMACCMPilot.INS.Tower
  other-modules:       SMACCMPilot.INS.Parameters,
                       SMACCMPilot.INS.Types
  build-depends:       base >=4.6,
                       ad >=4.2,
                       estimator == 1.0.*,
                       ivory >=0.1,
                       ivory-px4-hw >=0.1,
                       ivory-stdlib >=0.1,
                       lens >=4.6,
                       linear >=1.15,
                       monadLib >= 3.7,
                       reflection >=1.5,
                       tower >=0.9
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror

executable inertialnav
  hs-source-dirs:      tests
  main-is:             InertialNav.hs
  build-depends:       base >=4.6,
                       estimator == 1.0.*,
                       lens >=4.6,
                       linear >=1.15,
                       monadLib >= 3.7,
                       smaccm-ins
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror

executable psas
  hs-source-dirs:      tests
  main-is:             PSAS.hs
  build-depends:       base >=4.6,
                       binary >=0.7,
                       bytestring >=0.10,
                       estimator == 1.0.*,
                       monadLib >= 3.7,
                       smaccm-ins
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror

executable codegen
  hs-source-dirs:      tests
  main-is:             CodeGen.hs
  build-depends:       base >=4.6,
                       estimator == 1.0.*,
                       ivory >=0.1,
                       ivory-artifact >=0.1,
                       ivory-backend-c >=0.1,
                       smaccm-ins
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror
