name:                smaccm-ins
version:             0.2.0.0
license:             BSD3
license-file:        LICENSE
author:              Jamey Sharp
maintainer:          jamey@galois.com
category:            Math
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     SMACCMPilot.INS.Ivory,
                       SMACCMPilot.INS.Simulate,
                       SMACCMPilot.INS.Tower,
                       SMACCMPilot.INS.Tests.SensorFusion
  other-modules:       SMACCMPilot.INS.Parameters,
                       SMACCMPilot.INS.Types
  build-depends:       base >=4.6,
                       ad >=4.2,
                       estimator == 1.1.*,
                       ivory >=0.1,
                       ivory-px4-hw >=0.1,
                       ivory-serialize >=0.1,
                       ivory-stdlib >=0.1,
                       lens >=4.6,
                       linear >=1.16 && <1.17,
                       monadLib >= 3.7,
                       reflection >=1.5,
                       tower >=0.9,
                       tower-hal,
                       ivory-bsp-stm32,
                       smaccm-datalink
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror

executable riseborough-recording-test-native
  hs-source-dirs:      tests
  main-is:             RiseboroughTest.hs
  build-depends:       base >=4.6,
                       estimator == 1.1.*,
                       lens >=4.6,
                       linear >=1.15,
                       monadLib >= 3.7,
                       smaccm-ins
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror

executable psas-recording-test-native
  hs-source-dirs:      tests
  main-is:             PSASNative.hs
  build-depends:       base >=4.6,
                       binary >=0.7,
                       bytestring >=0.10,
                       estimator == 1.1.*,
                       monadLib >= 3.7,
                       smaccm-ins
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror

executable psas-recording-test-gen
  hs-source-dirs:      tests
  main-is:             PSASIvory.hs
  build-depends:       base >=4.6,
                       estimator == 1.1.*,
                       ivory >=0.1,
                       ivory-artifact >=0.1,
                       ivory-backend-c >=0.1,
                       smaccm-ins
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror

executable px4-sensor-fusion-test-gen
  hs-source-dirs:      tests
  main-is:             PX4SensorFusionTest.hs
  build-depends:       base >=4.6,
                       estimator == 1.1.*,
                       tower,
                       tower-config,
                       tower-freertos-stm32,
                       ivory-px4-hw,
                       smaccm-ins
  default-language:    Haskell2010
  ghc-options:         -Wall -Werror
